--- a/Dockerfile.mayhem
+++ b/Dockerfile.mayhem
@@ -7,11 +7,5 @@ COPY . /repo
 WORKDIR /repo/MiniScript-cpp
 RUN make -j8
 
-RUN mkdir -p /deps
-RUN ldd /repo/MiniScript-cpp/miniscript | tr -s '[:blank:]' '\n' | grep '^/' | xargs -I % sh -c 'cp % /deps;'
-
 FROM ubuntu:22.04 as package
-
-COPY --from=builder /deps /deps
-COPY --from=builder /repo/MiniScript-cpp/miniscript /repo/MiniScript-cpp/miniscript
-ENV LD_LIBRARY_PATH=/deps
+COPY --from=builder /repo/MiniScript-cpp/miniscript /
